sample/error/gen_alloc-index_root.bfr
codegen [
  $alloc {
    i: index;
  } in
  > i
]